# MKID-Simulation

./: .gitignore  LICENSE  Physics_Background.md  README.md  ROADMAP.md  pyproject.toml  qp_example_notebook_v1.md  qp_simulator.py  qp_simulator_v1.py
.github/workflows/: ci.yml
examples/: example_simulation.py
notebooks/: example_notebook.ipynb
qp_simulator/: __init__.py  qp_simulator.py  qp_validation.py
tests/: test_qp_simulator.py
